--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
 	body {	
 		margin: 0;
 		padding: 0;
-		background-color: #f9f9f9;
+		background-color: #f1f1f1;
 	}
 	
 	div#content {
 		min-width: 400px;
 		height: 100%;
-		margin: auto;
+		margin: 0 auto;
+		background-color: #f9f9f9;
+	}
+	
+	div#header {
+		color: #fff;
+		background-image: linear-gradient(-180deg,#ffc151,#fda300 90%);
+	}
+	
+	#header h1 {
+		padding: 10;
+		margin: 0;
 	}
 
 	div#view-login {
 		position: relative;
+		margin: 20px;
 		padding: 20px;
 		top: 15%;	
 		
@@ -97,7 +109,9 @@
 <body>
 	
 	<div id="content">
-		<div id="header"></div>
+		<div id="header">
+			<h1>Draftmaster</h1>
+		</div>
 			
 		<div id="view-login"></div>
 		<div id="view-draft"></div>
