--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 <head>
 <style>
+
+	/*			HTML			*/
+
 	body {	
 		margin: 0;
 		padding: 0;
@@ -10,12 +13,15 @@
 	
 	div#content {
 		min-width: 400px;
-		height: 100%;
 		margin: 0 auto;
 		background-color: #f9f9f9;
 	}
 	
+	/*			HEADER			*/
+	
 	div#header {
+		position: absolute;
+		top: 0;
 		color: #fff;
 		background-image: linear-gradient(-180deg,#ffc151,#fda300 90%);
 	}
@@ -24,12 +30,42 @@
 		padding: 10;
 		margin: 0;
 	}
-
+	
+	
+	/*			FOOTER			*/
+	
+	div#footer {
+		position: absolute;
+		bottom: 0;
+		color: #fff;
+		background-color: #fda300;
+	}
+	
+	#footer button {
+		padding: 10;
+		font-size: 1.5em;
+		
+		display: inline-block;
+		display: -moz-inline-box;
+		text-align: center;
+	
+		color: #fff;
+		background-color: #0000;
+		border: 0px solid;
+	}
+	
+	#footer button:active {
+		color: #fff;
+	}
+	
+	
+	/*			LOGIN			*/
+	
 	div#view-login {
 		position: relative;
 		margin: 20px;
 		padding: 20px;
-		top: 15%;	
+		top: 10%;	
 		
 		border-radius: 5px;
 		border: 1px solid #d8dee2;
@@ -79,6 +115,9 @@
 		
 		border-radius: .25em;
 	}
+	
+	
+	/*			DRAFT			*/
 
 	div#view-draft {
 	}
@@ -291,6 +330,64 @@ function LoginView()
 }
 </script>
 <script>
+
+
+function NewDraftView()
+{
+	var playersContainer = undefined;
+	
+	var onAddPlayerClick = function()
+	{
+		// add new player div
+		var html = '<div class="view-newPlayer">';
+		html += '<input class="input-newPlayerName" type="text" placeholder="Name">';
+		html += '<button type="button" class="btn-removeNewPlayer">Remove</button>';
+		playersContainer.innerHTML += html + '</div>';
+		
+		// configure UI
+		var newPlayers = playersContainer.getElementsByClassName('view-newPlayer');
+		for(var i = 0; i < newPlayers.length; i++)
+		{
+			newPlayers[i].getElementsByClassName('btn-removeNewPlayer')[0].onclick = function() {
+				onRemovePlayerClick(i);
+			}
+		}
+	}
+	
+	var onRemovePlayerClick = function(index)
+	{
+		// TODO - passing index not working
+	}
+	
+	var onStartDraftClick = function()
+	{
+		var newPlayers = Array.from(playersContainer.getElementsByClassName('view-newPlayer'));
+		var players = newPlayers.map(el => el.getElementsByClassName('input-newPlayerName')[0].value);	
+		var draftdata = new DraftData(players);
+		initNewDraft(draftdata);
+	}
+	
+	this.toHtml = function()
+	{
+		var html = '<div id="view-newDraft"></div>';
+		
+		return html;
+	}
+	
+	this.onViewAdded = function()
+	{
+		playersContainer = document.getElementById('view-newDraft');
+		Footer.setContent([
+			["Add Player", onAddPlayerClick],
+			["Start Draft", onStartDraftClick]
+		]);
+	}
+	
+	return this;
+}
+
+</script>
+<script>
 /*
 	
 		DRAFT - DATA
@@ -361,175 +458,6 @@ function DraftData(players)
 DraftData.PLAYER_WILDCARD = 'WILDCARD';
 
 
-/*
-	
-		DRAFT - VIEWS
-
-*/
-
-function NewDraftView()
-{
-	var playersContainer = undefined;
-	
-	var onAddPlayerClick = function()
-	{
-		// add new player div
-		var html = '<div class="view-newPlayer">';
-		html += '<input class="input-newPlayerName" type="text" placeholder="Name">';
-		html += '<button type="button" class="btn-removeNewPlayer">Remove</button>';
-		playersContainer.innerHTML += html + '</div>';
-		
-		// configure UI
-		var newPlayers = playersContainer.getElementsByClassName('view-newPlayer');
-		for(var i = 0; i < newPlayers.length; i++)
-		{
-			newPlayers[i].getElementsByClassName('btn-removeNewPlayer')[0].onclick = function() {
-				onRemovePlayerClick(i);
-			}
-		}
-	}
-	
-	var onRemovePlayerClick = function(index)
-	{
-		// TODO - passing index not working
-	}
-	
-	var onStartDraftClick = function()
-	{
-		var newPlayers = Array.from(playersContainer.getElementsByClassName('view-newPlayer'));
-		var players = newPlayers.map(el => el.getElementsByClassName('input-newPlayerName')[0].value);	
-		var draftdata = new DraftData(players);
-		initNewDraft(draftdata);
-	}
-	
-	this.toHtml = function()
-	{
-		var html = '<div id="view-newDraft">';
-		
-		html += '</div>';
-		
-		html += '<div class="footer-newDraft">';
-		html += '<button type="button" id="btn-addPlayer">Add Player</button>';
-		html += '<button type="button" id="btn-StartDraft">Start Draft</button>';
-		html += '</div>';
-		
-		return html;
-	}
-	
-	this.onViewAdded = function()
-	{
-		playersContainer = document.getElementById('view-newDraft');
-		document.getElementById('btn-addPlayer').onclick = onAddPlayerClick;
-		document.getElementById('btn-StartDraft').onclick = onStartDraftClick;
-	}
-	
-	return this;
-}
-
-/* 
-
-		MATCH VIEW
-
-*/
-
-function MatchView(context, _data)
-{
-	var match = _data;
-	var view = undefined;
-	var input = undefined;
-	
-	this.toHtml = function()
-	{
-		var name1 = match.player1 == -1 ? '?' : context.players[match.player1];
-		var name2 = match.player2 == -1 ? '?' : context.players[match.player2];
-		
-		var html = '<div class="view-match" id="view-match-' + match.id +'">';
-		html += '<p>' + name1 + ' vs. ' + name2 + '</p>';
-		html += '<input class="input-match-result" type="text" placeholder="Result" value="' + match.result + '">';
-		html += '</div>';
-		return html;
-	}
-	
-	this.onViewAdded = function()
-	{
-		view = document.getElementById('view-match-' + match.id);
-		input = view.getElementsByClassName('input-match-result')[0];
-		input.onchange = this.onInputChange;
-	}
-	
-	this.onInputChange = function()
-	{
-		match.result = input.value;
-		Main.database.updateDraft(context);
-	}
-	
-	return this;
-}
-
-/* 
-
-		ROUND VIEW
-
-*/
-
-function RoundView(context, _data)
-{
-	var round = _data;
-	var view = undefined;
-	var viewMatches = [];
-	
-	var onBtnComplete = undefined;
-	
-	this.setOnBtnComplete = function(callback)
-	{
-		onBtnComplete = callback;
-	};
-	
-	this.toHtml = function()
-	{
-		viewMatches = [];
-		
-		var html = '<div class="view-round" id="view-round-' + round.id +'">';
-		for (var i = 0; i < round.matches.length; i++)
-		{
-			var match = new MatchView(context, round.matches[i]);
-			viewMatches.push(match);
-			html += match.toHtml();
-		}
-		
-		// attach button onRoundComplete
-		if (context.currentRoundId == round.id)
-		{
-			html += '<div class="view-roundButton"><button type="button" id="btn-roundComplete">Complete</button></div>';
-		}
-		
-		html += '</div>';
-		
-		return html;
-	}
-	
-	this.onViewAdded = function()
-	{
-		view = document.getElementById('view-round-' + round.id);
-		viewMatches.forEach(function(viewMatch){
-			viewMatch.onViewAdded();
-		});
-		
-		// configure button onRoundComplete
-		if (context.currentRoundId == round.id) 
-		{
-			document.getElementById('btn-roundComplete').onclick = function(){
-				if (onBtnComplete != undefined)
-				{
-					onBtnComplete();
-				}
-			};
-		}
-	}
-	
-	
-	return this;
-}
 
 /*
 
@@ -655,6 +583,111 @@ function nextRound(data)
 	Main.database.updateDraft(data);
 }
 
+/* 
+
+		MATCH VIEW
+
+*/
+
+function MatchView(context, _data)
+{
+	var match = _data;
+	var view = undefined;
+	var input = undefined;
+	
+	this.toHtml = function()
+	{
+		var name1 = match.player1 == -1 ? '?' : context.players[match.player1];
+		var name2 = match.player2 == -1 ? '?' : context.players[match.player2];
+		
+		var html = '<div class="view-match" id="view-match-' + match.id +'">';
+		html += '<p>' + name1 + ' vs. ' + name2 + '</p>';
+		html += '<input class="input-match-result" type="text" placeholder="Result" value="' + match.result + '">';
+		html += '</div>';
+		return html;
+	}
+	
+	this.onViewAdded = function()
+	{
+		view = document.getElementById('view-match-' + match.id);
+		input = view.getElementsByClassName('input-match-result')[0];
+		input.onchange = this.onInputChange;
+	}
+	
+	this.onInputChange = function()
+	{
+		match.result = input.value;
+		Main.database.updateDraft(context);
+	}
+	
+	return this;
+}
+
+/* 
+
+		ROUND VIEW
+
+*/
+
+function RoundView(context, _data)
+{
+	var round = _data;
+	var view = undefined;
+	var viewMatches = [];
+	
+	var onBtnComplete = undefined;
+	
+	this.setOnBtnComplete = function(callback)
+	{
+		onBtnComplete = callback;
+	};
+	
+	this.toHtml = function()
+	{
+		viewMatches = [];
+		
+		var html = '<div class="view-round" id="view-round-' + round.id +'">';
+		for (var i = 0; i < round.matches.length; i++)
+		{
+			var match = new MatchView(context, round.matches[i]);
+			viewMatches.push(match);
+			html += match.toHtml();
+		}
+		
+		// attach button onRoundComplete
+		if (context.currentRoundId == round.id)
+		{
+			html += '<div class="view-roundButton"><button type="button" id="btn-roundComplete">Complete</button></div>';
+		}
+		
+		html += '</div>';
+		
+		return html;
+	}
+	
+	this.onViewAdded = function()
+	{
+		view = document.getElementById('view-round-' + round.id);
+		viewMatches.forEach(function(viewMatch){
+			viewMatch.onViewAdded();
+		});
+		
+		// configure button onRoundComplete
+		if (context.currentRoundId == round.id) 
+		{
+			document.getElementById('btn-roundComplete').onclick = function(){
+				if (onBtnComplete != undefined)
+				{
+					onBtnComplete();
+				}
+			};
+		}
+	}
+	
+	
+	return this;
+}
+
 
 /*
 
@@ -776,6 +809,54 @@ function ScoreboardView()
 }
 </script>
 <script>
+function Footer() { }
+
+Footer.onScreenChange = function()
+{
+	
+}
+
+Footer.setTabActive = function(index)
+{
+	var btns = document.getElementsByClassName('btn-footer');
+	for(var i = 0; i < btns.length; i++)
+	{
+		btns[i].style.backgroundColor = i == index ? '#ffc151b3' : '#0000';
+	}
+}
+
+Footer.setContent = function(content, asTabs)
+{
+	if (content == undefined)
+	{
+		content = [];
+	}
+	
+	var html = '';
+	for(var i = 0; i < content.length; i++)
+	{
+		html += '<button type="button" class="btn-footer" id="btn-footer-' + i + '">' + content[i][0] + '</button>';
+	}
+	document.getElementById('footer').innerHTML = html;
+	
+	for(var i = 0; i < content.length; i++)
+	{
+		(function(index){
+			var btn = document.getElementById('btn-footer-' + index); 
+			
+			btn.onclick = function(){
+				content[index][1]();
+				if (asTabs) {
+					Footer.setTabActive(index);
+				}
+			};
+			
+			btn.style.width = (100 / content.length) + '%';
+		})(i)
+	}
+}
+</script>
+<script>
 function Main() 
 {	
 	Main.database = DB();
@@ -790,7 +871,7 @@ function Main()
 	showLoginView();
 	onScreenResize();
 	
-	setTimeout(onInitialised, 1000);
+	setTimeout(onInitialised, 300);
 }
 
 function isMobileDevice() {
@@ -799,12 +880,20 @@ function isMobileDevice() {
 
 function onScreenResize(event)
 {
+	var w = isMobileDevice() ? '90%' : '30%';
+	
+	var header = document.getElementById('header');
+	var footer = document.getElementById('footer');
 	var content = document.getElementById('content');
-	if (isMobileDevice()) {
-		content.style.width = '90%';
-	} else {
-		content.style.width = '30%';
-	}
+	
+	[header, footer, content].forEach(function(el) {
+		el.style.width = w;
+	});
+	
+	content.style.paddingTop = header.clientHeight + "px";
+	
+	var contentHeight = window.innerHeight - header.clientHeight - footer.clientHeight;
+	content.style.height = contentHeight + "px";
 	
 	Main.loginView.onResize();
 }
@@ -857,6 +946,7 @@ function loadDraftOrCreateNew()
 			showNewDraftView();
 		}
 	}).catch(function(error) {
+			console.log(error);
 		showNewDraftView();
 	});
 }
