--- a/index.html
+++ b/index.html
@@ -158,25 +158,51 @@
 	/*			DRAFT			*/
 
 	div#view-draft {
+		overflow-y: auto;
 		height: inherit;
 	}
 
 	div.view-round {
+		display: none;
 	}
 	
 	div.view-match {
-		display: table-cell;
-		
-		padding-left: 10px;
-		padding-right: 10px;
-		
-		border-width: 2px;
-		border-style: solid;
-		border-color: red;
+		margin: 10px 10px;
+		border-bottom: 2px solid #fda300;
 	}
 	
-	div.view-roundButton {
-		display: table-cell;
+	.view-match h3{
+		text-align: center;
+	}
+	
+	.view-match select {
+		display: block;
+		margin: 0 auto;
+		padding: 5px;
+		margin-bottom: 20px;
+		
+		border: 0px;
+		
+		-webkit-appearance: none;
+		
+		border-radius: 5px;
+		background-color: #ffc151;
+	}
+	
+	.view-roundButton button {
+		display: block;
+		margin: 20px auto;
+		
+		min-height: 38px;
+		font-size: 2 em;
+		text-align: center;
+		padding: 0 15;
+	
+		color: #fda300;
+		background-color: #0000;
+		
+		border-radius: 5px;
+		border: 1px solid #fda300;
 	}
 
 </style>
@@ -578,10 +604,10 @@ function getStatsFromPlayerId(data, playerId)
 
 function compareMatchScores(el1, el2)
 {
-	if (el1.score[0] > el2.score[0] || el1.score[1] > el2.score[1] || el1.score[2] < el2.score[2]) {
-		return -1;
-	} else if(el1.score[0] < el2.score[0] || el1.score[1] < el2.score[1] || el1.score[2] > el2.score[2]) {
+	if(el1.score[0] < el2.score[0] || el1.score[1] < el2.score[1] || el1.score[2] > el2.score[2]) {
 		return 1;
+	} else if (el1.score[0] > el2.score[0] || el1.score[1] > el2.score[1] || el1.score[2] < el2.score[2]) {
+		return -1;
 	} else {
 		return 0;
 	}
@@ -676,14 +702,14 @@ function MatchView(context, _data)
 		var name2 = match.player2 == -1 ? '?' : context.players[match.player2];
 		
 		var html = '<div class="view-match" id="view-match-' + match.id +'">';
-		html += '<p>' + name1 + ' vs. ' + name2 + '</p>';
-		html += '<input class="input-match-result" type="text" placeholder="Result" value="' + match.result + '">';
+		html += '<h3>' + name1 + ' vs. ' + name2 + '</h3>';
 		html += ' <select class="input-match-result">';
-		['2:0', '2:1', '1:2', '0:2'].forEach(function(score){
-			html += '<option value="' + score + '">' + score + '</option>';
+		['0:0', '2:0', '2:1', '1:2', '0:2'].forEach(function(score){
+			
+			var selected = score == match.result ? ' selected' : '';
+			html += '<option value="' + score + '" ' + selected + '>' + score + '</option>';
 		});
 		html += '</select>';
-		
 		html += '</div>';
 		return html;
 	}
@@ -738,7 +764,7 @@ function RoundView(context, _data)
 		// attach button onRoundComplete
 		if (context.currentRoundId == round.id)
 		{
-			html += '<div class="view-roundButton"><button type="button" id="btn-roundComplete">Complete</button></div>';
+			html += '<div class="view-roundButton"><button type="button" id="btn-roundComplete">Round Complete</button></div>';
 		}
 		
 		html += '</div>';
@@ -756,6 +782,8 @@ function RoundView(context, _data)
 		// configure button onRoundComplete
 		if (context.currentRoundId == round.id) 
 		{
+			view.style.display = 'block';
+			
 			document.getElementById('btn-roundComplete').onclick = function(){
 				if (onBtnComplete != undefined)
 				{
@@ -960,7 +988,7 @@ function Main()
 	showLoginView();
 	onScreenResize();
 	
-	setTimeout(onInitialised, 400);
+	setTimeout(onInitialised, 2000);
 }
 
 function isMobileDevice() {
@@ -981,8 +1009,6 @@ function onScreenResize(event)
 	var contentHeight = window.innerHeight - header.clientHeight - footer.clientHeight;
 	content.style.height = contentHeight + "px";
 	content.style.paddingTop = header.clientHeight + "px";
-	
-	console.log(window.innerHeight + " < " + contentHeight);
 	
 	// resize
 	Main.loginView.onResize();
