--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 	/*			DRAFT			*/
 
 	div#view-draft {
+		display: block;
 		overflow-y: auto;
 		height: inherit;
 	}
@@ -205,6 +206,10 @@
 		border: 1px solid #fda300;
 	}
 
+	#view-scoreboard {
+		display: none;
+	}
+	
 </style>
 </head>
 <body>
@@ -847,10 +852,18 @@ function DraftView(_data)
 		}
 		
 		Footer.setContent([
-			["Scores", (function(){})],
-			["Rounds", (function(){})],
+			["Scores", (function(){
+				document.getElementById('view-scoreboard').style.display = 'block';
+				document.getElementById('view-draft').style.display = 'none';
+			})],
+			["Rounds", (function(){
+				document.getElementById('view-scoreboard').style.display = 'none';
+				document.getElementById('view-draft').style.display = 'block';
+			})],
 			["New Draft", onClickNewDraft]
 		], true);
+		
+		Footer.setTabActive(1);
 		
 		onDraftDataChange();
 	}
