--- a/index.html
+++ b/index.html
@@ -702,14 +702,20 @@ function getStatsFromPlayerId(data, playerId)
 }
 
 function compareMatchScores(el1, el2)
-{
-	if(el1.score[0] < el2.score[0] || el1.score[1] < el2.score[1] || el1.score[2] > el2.score[2]) {
-		return 1;
-	} else if (el1.score[0] > el2.score[0] || el1.score[1] > el2.score[1] || el1.score[2] < el2.score[2]) {
-		return -1;
-	} else {
-		return 0;
+{	
+	if (el1.score[0] != el2.score[0]) {
+		return el1.score[0] < el2.score[0] ? 1 : -1;
 	}
+	
+	if (el1.score[2] != el2.score[2]) {
+		return el1.score[2] > el2.score[2] ? 1 : -1;
+	}
+	
+	if (el1.score[1] != el2.score[1]) {
+		return el1.score[1] < el2.score[1] ? 1 : -1;
+	}
+	
+	return 0;
 }
 
 // returns sorted player list, most wins ASC
@@ -1262,6 +1268,10 @@ function initNewDraft(newDraftData)
 		console.log(error);
 	});
 }
+
+var results = [{playerId:0, score:[1,2,1]}, {playerId:1, score:[1,3,2]}, {playerId:2, score:[0,0,0]}]
+results.sort(compareMatchScores);
+console.log(results);
 
 Main();
 </script>
