--- a/index.html
+++ b/index.html
@@ -707,12 +707,8 @@ function compareMatchScores(el1, el2)
 		return el1.score[0] < el2.score[0] ? 1 : -1;
 	}
 	
-	if (el1.score[2] != el2.score[2]) {
+	if (el1.score[2] - el1.score[1] != el2.score[2] - el2.score[1]) {
 		return el1.score[2] > el2.score[2] ? 1 : -1;
-	}
-	
-	if (el1.score[1] != el2.score[1]) {
-		return el1.score[1] < el2.score[1] ? 1 : -1;
 	}
 	
 	return 0;
