--- a/index.html
+++ b/index.html
@@ -1234,12 +1234,11 @@ function onSignedIn()
 function loadDraftOrCreateNew()
 {
 	var draftspongo = JSON.parse('{"currentRoundId":3,"players":["Thommi","Karl","Josua","Dani","Andi","Jeri"],"rounds":[{"id":0,"matches":[{"id":0,"player1":0,"player2":1,"result":"2:0"},{"id":1,"player1":2,"player2":3,"result":"2:1"},{"id":2,"player1":4,"player2":5,"result":"2:1"}]},{"id":1,"matches":[{"id":3,"player1":0,"player2":2,"result":"1:2"},{"id":4,"player1":4,"player2":3,"result":"0:2"},{"id":5,"player1":5,"player2":1,"result":"2:0"}]},{"id":2,"matches":[{"id":6,"player1":2,"player2":5,"result":"0:2"},{"id":7,"player1":0,"player2":3,"result":"0:2"},{"id":8,"player1":4,"player2":1,"result":"2:0"}]},{"id":3,"matches":[{"id":9,"player1":1,"player2":2,"result":"0:0"},{"id":10,"player1":3,"player2":5,"result":"0:0"},{"id":11,"player1":0,"player2":4,"result":"0:0"}]}]}');
-	Main.database.updateDraft(draftspongo);
+	//Main.database.updateDraft(draftspongo);
 
-	return;
 	Main.database.loadDraftData().then(function(doc) {
 		if (doc.exists) {
-			Main.draftView.visualizeDraftData(draftspongo);
+			Main.draftView.visualizeDraftData(doc.data());
 			console.log(doc.data());
 		} else {
 			showNewDraftView();
